# Oak-Pokemon-Research-Lab

./: .gitignore
Examples/Qiniu/QiniuPic/v1/: mainwindow.cpp
Examples/Qiniu/QiniuPic/v2/v2/: .gitignore
Examples/Qiniu/libQtQiniuSdk/: CMakeLists.txt
Examples/Snake/: CMakeLists.txt
Examples/StrokeDemo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Projects/Alkaid/: README.md
Projects/Alkaid/src/game/core/src/com/mygdx/game/Entity/: Figures.java  FiguresAnimation.java  FiguresControl.java  FiguresNet.java  FiguresNetAnimation.java  FiguresProperty.java  OrthogonalTiledMapRenderer2.java
Projects/Alkaid/src/game/core/src/com/mygdx/game/Net/: Client.java
Projects/Alkaid/src/game/core/src/com/mygdx/game/Screens/: DefaultScreen.java  GameOverScreen.java  GameScreen.java  MainMenu.java
Projects/Alkaid/src/server/src/com/company/: ServerMain.java  ServerThread.java
Projects/Krabby/: .gitignore  CMakeLists.txt  README.md
Projects/Krabby/src/: CMakeLists.txt  bottom.cpp  bottom.ui  choosearticledialog.cpp  choosearticledialog.ui  database.cpp  database.h  finishdialog.cpp  finishdialog.h  finishdialog.ui  keyboardwidget.cpp  keyboardwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  qrc.qrc  score.cpp  score.h  scorechartwidget.cpp  scorechartwidget.h  setting.cpp  setting.h  settingdialog.cpp  settingdialog.h  settingdialog.ui  toolbar.cpp  toolbar.h  typewidget.cpp  typewidget.h
Projects/MusicPlayer/: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  FileListView.qml  FileSystem.cpp  FileSystem.h  KeyFilter.cpp  KeyFilter.h  MusicLyrics.qml  MusicPlayer.qml  MyMusic.pro  MyMusic_zh_CN.ts  README.md  Settings.cpp  Settings.h  convert.py  main.cpp  main.qml
Projects/MusicPlayer/SnowyEffect/: SnowyEffect.qep
Projects/MusicPlayer/SnowyEffect/export/: SnowyEffect.qml  snowyeffect.frag.qsb  snowyeffect.vert.qsb
Projects/MusicPlayer/android/: AndroidManifest.xml
Projects/XmlReader/XmlReader_v1/: README.md
Projects/huorong/: README.md  main.cpp
Projects/huorong/installer/: README.md
Projects/miniJVM/: README.md
Projects/swcontest/: README.md
Projects/swcontest/xs/: convert_to_dataset.py  convert_to_dataset_with_label.py  extract_all.py
Projects/swcontest/xs/midi/: DataBaseInit.py
